--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.03.2022 09:13:37</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.03.2022 09:40:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -157,7 +157,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane medailonky z rybich filetu {treska, makrela, uzeny losos} s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem {L} 139 </li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Opekane jihocinske veprove ve sladkokysele omacce s ananasem, paprikami, sezamem a zazvorem, jasminova ryze, salatek 139</li><li>Italske rizoto na bilem vine s gorgonzolou, pak coj a kousky pecene husy, salatek 169</li><li>Indicke badzi {cibulovo-cizrnove smazenky} se zampiony a syrem halloumi, pikantni rajcatova salsa, cizrnovy salat se zeleninou 139</li></ol>
+<ol><li>Grilovane biftecky z rybich filetu {treska, makrela, uzeny losos} s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem {L} 139 </li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou citronovo-koprovou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Opekane jihocinske veprove ve sladkokysele omacce s ananasem, paprikami, sezamem a zazvorem, jasminova ryze, salatek 139</li><li>Italske rizoto na bilem vine s gorgonzolou, pak coj a kousky pecene husy, salatek 169</li><li>Indicke badzi {cibulovo-cizrnove smazenky} se zampiony a syrem halloumi, pikantni rajcatova salsa, cizrnovy salat se zeleninou 139</li></ol>
 </td>
 </tr>
 </table>
