--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.03.2022 13:55:05</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.03.2022 06:10:46</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 14. 03. 2022</h5>
+<h5>Úterý, 15. 03. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Zeleninová s uzeným masem a bramborem</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 14.3.2022</div>
+<div class="nadpis">Úterý 15.3.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Pavlova </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Citronový cheesecake</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Mřížkový kakaový koláč s tvarohem</div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Karotkový krém s pomerančovou šťávou a koriandrem - v menu </div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Karotkový krém s pomerančovou šťávou a koriandrem- samostatně </div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Pečené krůtí prso, smetanová omáčka, zeleninový kuskus <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Vepřová kýta, špenátová omáčka se žampiony, basmati rýže, jarní cibulka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Pohankové risoto s karotkou a hráškem, parmazán, cherry rajčata <em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramboračka s hříbky a žampiony</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené řízky z kuřecích prsou, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, šlehačka, citrón</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s volským okem na šunce, pečené brambory s kmínem</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Špíz z kuřecích prsou, vepřové kotlety, cibule a papriky na roštu, rukolový salát s červenou řepou, vařené vejce, květákové pyré</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s boloňským ragú, bešamelem a sýrem,.salát coleslav </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">1/2</td><td class="menuName">Pečená kachna na kmíně, bramborové a houskové knedlíky, dušené bílé zelí</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Do růžova pečená vepřová panenka na jemné hříbkové omáčce, smažené hranolky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažený sýr (45%) , vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny kolínka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Pečené baby kuře s nádivkou ala bažant, variace knedlíků, špenát</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 200g Steak z kuřecích prsou gratinovaný mozzarellou a rajčaty s bazalkovým pestem, brokolicové pyré, mrkvové nočky, vařené vejce</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos  s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Krůtí soté se zeleninou a chilli, smažené bramborové hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili ala carbonara, plátkovaná kuřecí prsa, strouhaný parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortilla plněná vepřovou panenkou, majonézovým dresinkem, anglickou slaninou, ledovým salátem, rukolou a zeleninou, smažené bramborové plátky, mexický dip</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -161,7 +121,7 @@ smaženými bramborovými lupínky a chipotle majonézou
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Boršč s červenou řepou a zakysanou smetanou 1a,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí kostky na česneku se špenátem a našimi bramborovými knedlíky 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Špíz z vepřové krkovice s klobásou a paprikou s opečenými brambory, cibulovým salátem a chipotle majonézou 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Hříbkové krémové rizoto z rýže Arborio se sýrem Fotre Classico a rukolovými listy 1a,7</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Česnečka s chlebovými krutony 1ab,7</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Šunka od kosti se smetanovou křenovou omáčkou a našimi houskovými knedlíky 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Lasagne Bolognese s masovým ragú, drcenými rajčaty a jemnou smetanovou sýrovou omáčkou 1a,3,7,9</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Ciabatta s trhaným hovězím masem, karamelizovanou cibulí, čedarem, polníčkem, rajčaty a bbq majonézou se smaženými bramborovými hranolky 1a,3,7,10</td><td class="pricem">145 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
