--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.03.2022 09:13:49</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.03.2022 09:40:29</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,14 @@
 <h5>Úterý, 15. 03. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová s uzeným masem a bramborem</strong>
+<strong>Houbová polévka</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hovězí guláš s houskovým knedlíkem NEBO rýží</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							135,-
-						</span>
-</p>
-<p>
-<strong>Míchaný salát s marinovanými mořskými plody a bagetkou</strong>
+<strong>Chilli con carne s rýží NEBO pečeným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -68,7 +61,7 @@
 <div class="clear"></div>
 </li>
 <li class="poznamka">
-<div class="polozka">Tvarohová štola s rozinkami </div>
+<div class="polozka">Tvarohová štola s rozinkami  (bez lepku) </div>
 <div class="cena">35 Kč</div>
 <div class="clear"></div>
 </li>
@@ -174,7 +167,7 @@ smaženými bramborovými lupínky a chipotle majonézou
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s grilovanym citronem a jogurtovou bylinkovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstve prazmy s grilovanym citronem a jogurtovou bylinkovou omackou, korenena ryze s beluga cockou, salatek 175</li><li>Recke veprove gyros nudlicky se syrem halloumi v chlebove placce s cizrnovym hummusem, krupkovy salat se zeleninou a bylinkami {L} 139</li><li>Grilovane medailonky z irskeho hoveziho krku {chuck roll} s peprovou omackou, gratinovane brambory, salatek 175</li><li>Marocka cizrnova tazina s pecenou dyni, rajcaty, quinoou a balkanskym syrem, kuskus {L} 139</li></ol>
+<ol><li>Peceny filet z norskeho slede se syrskymi bio olivami a bazalkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami a cuketami ( L ) 139</li><li>Peceny filet z cerstve norske tresky se syrskymi bio olivami a bazalkovym pestem, stredomorsky fusilli salat s rajcaty, paprikami a cuketami ( L ) 169</li><li>Thajske arasidove kari s veprovym masem, bataty, lilky, ananasem a kokosovym mlekem, jasminova ryze 139</li><li>Teleci hrudi pecene na citronech a kaparach, pecene brambory, salatek 169</li><li>Pecena cervena repa s balzamikem, cizrnovy hummus, sazene vejce, arabske placky {L} 139</li></ol>
 </td>
 </tr>
 </table>
